# toy-units

./: .gitignore  CMakeLists.txt  README.md
physics/: unit.hh  vector.hh
physics/unit/: constants.hh  detail.hh  io.hh  math.hh  prefix.hh  prototype.hh  standard.hh  type_traits.hh
physics/util/: assert.hh  configuration.cc  configuration.hh  exception.hh  io.cc  io.hh  logger.cc  logger.hh  math.hh  mixin.hh  root.hh  stringify.hh  type_traits.hh
physics/vector/: io.hh  prototype.hh
test/: CMakeLists.txt  test_unit.cc  test_vector.cc
